--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     const web3 = new Web3(new Web3.providers.HttpProvider('https://polygon-mainnet.infura.io/v3/277cd3da7a8c4a68a608c6a7616c71f0'));
     const contract = new web3.eth.Contract(contractABI, contractAddress);
     var link = document.createElement("a");
-    link.href = "https://ipfs.io/ipfs/QmdV5495Ji78b3LfVGhbvvP8eBidi8tbVPvA9itcdvX6MK/chickenscratch-7.txt;
+    link.href = "https://ipfs.io/ipfs/QmdV5495Ji78b3LfVGhbvvP8eBidi8tbVPvA9itcdvX6MK/chickenscratch-7.txt";
     link.textContent = "Click here to learn more";
     link.target = "_blank";
     link.style.fontWeight = "bold";
