--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <table>
     <thead>
     <tr>
-        <th>Element</th>
+        <th>Egg</th>
         <th>Queue</th>
         <th>Address</th>
         <th>Stamp</th>
