--- a/index.html
+++ b/index.html
@@ -63,14 +63,25 @@
             border-radius: 5px;
             margin-bottom: 10px;
         }
+        .image {
+            width: 160px;
+            height: 160px;
+            border: 2px solid #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        img {
+            max-width: 100%;
+            max-height: 100%;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.5.2/web3.min.js"></script>
 </head>
 <body>
 <header>
-    <div>
-        <h1>Contract: <span id="contract"></span></h1>
-    </div>
+    <div><h1>Contract: <span id="contract"></span></h1></div>
+    <div class="image"> <img src="./vectorlinglogo.png" alt="Vectorling Logo"></div>
     <div class="header-info">
         <div id="q"></div>
         <div id="pop"></div>
