--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         img {
             max-width: 100%;
             max-height: 100%;
+            display: block;
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.5.2/web3.min.js"></script>
@@ -81,7 +82,7 @@
 <body>
 <header>
     <div><h1>Contract: <span id="contract"></span></h1></div>
-    <div class="image"> <img src="./vectorlinglogo.png" alt="Vectorling Logo"></div>
+    <div class="image"> <a href="https://opensea.io/collection/vectorling" target="_blank"><img src="./vectorlinglogo.png" alt="Vectorling Logo"></a></div>
     <div class="header-info">
         <div id="q"></div>
         <div id="pop"></div>
