--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         dep = b.s[0];
         pop = b.p.length - q;
         document.getElementById('contract').innerText = n;
-        document.getElementById('q').innerText = `Current Queue: ${q}`;
-        document.getElementById('pop').innerText = `Population: ${pop}`;
+        document.getElementById('q').innerText = `Current queue: egg #${q}`;
+        document.getElementById('pop').innerText = `Population: ${pop} eggs`;
         document.getElementById('life').innerText = `Lifespan: ${pace(t - dep)}`;
         document.getElementById('price').innerText = `1 Egg = 1 POL`;
         const tableBody = document.getElementById('dataBody');
