--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     const web3 = new Web3(new Web3.providers.HttpProvider('https://polygon-mainnet.infura.io/v3/277cd3da7a8c4a68a608c6a7616c71f0'));
     const contract = new web3.eth.Contract(contractABI, contractAddress);
     var link = document.createElement("a");
-    link.href = "https://eggbas.github.io/ebx/info";
+    link.href = "https://eggbas.github.io/vectorlings/info";
     link.textContent = "Click here to learn more";
     link.target = "_blank";
     link.style.fontWeight = "bold";
