--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </head>
 <body>
 <header>
-    <div><h1>Contract: <span id="contract"></span></h1></div>
+    <div><h1><span id="contract"></span></h1></div>
     <div class="image"> <a href="https://opensea.io/collection/vectorling" target="_blank"><img src="./vectorlinglogo.png" alt="Vectorling Logo"></a></div>
     <div class="header-info">
         <div id="q"></div>
